# voxel

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
assets/shaders/: camera_data.glsl  cube.frag  cube.vert  cube_output.glsl  directional_light.glsl  line.frag  line.vert  material.glsl  matrix_transform.glsl  sky_box.frag  sky_box.vert
cmake/: imgui-extras.cmake
engine/: CMakeLists.txt
engine/core/: engine.cc  engine.h  layer.cc  layer.h  layer_stack.cc  layer_stack.h  prelude.h  state.h  window.cc  window.h
engine/core/debug/: assert.h  log.cc  log.h
engine/core/event/: event_handler.h  event_handler.inl  events.h  input.cc  input.h  key_code.h  key_event.h  mouse_code.h  mouse_event.h  window_event.h
engine/core/math/: transform.cc  transform.h
engine/core/utils/: timer.cc  timer.h  uuid.cc  uuid.h
engine/graphics/: buffer_layout.cc  buffer_layout.h  camera.cc  camera.h  frame_buffer.cc  frame_buffer.h  index_buffer.cc  index_buffer.h  material.h  render_command.cc  render_command.h  renderer.cc  renderer.h  shader.cc  shader.h  sky_box.cc  sky_box.h  texture.cc  texture.h  uniform_buffer.cc  uniform_buffer.h  vertex_array.cc  vertex_array.h  vertex_buffer.cc  vertex_buffer.h
engine/ui/: imgui_layer.cc  imgui_layer.h
game/: CMakeLists.txt  game_camera.cc  game_camera.h  game_layer.cc  game_layer.h  main.cc
game/world/: world.cc  world.h
